tests/positive/test-success-concatstr-1.rooc
// Test concat_str with 2 simple strings
fun main() -> int {
    concat_str("hello ", "world");
    return 0;
}

