tests/negative/test-fail-logic.rooc
fun main() -> int {    
    1 && 2;
    return 0;
}